# gradops

./: LICENSE  README.md  pyproject.toml
src/gradops/: finite_diff.py  finite_diff_mag.py  utils.py
src/gradops/cuda/: d_mag_grad_1d_complex.cu  d_mag_grad_1d_real.cu  d_mag_grad_2d_complex.cu  d_mag_grad_2d_real.cu  d_mag_grad_3d_complex.cu  d_mag_grad_3d_real.cu  d_x_complex.cu  d_y_complex.cu  d_z_complex.cu  dt_x_complex.cu  dt_y_complex.cu  dt_z_complex.cu  dtd_x_complex.cu  dtd_y_complex.cu  dtd_z_complex.cu
